...
								.id(mainButtonLabel)
								.transition(.blurReplace)
								.font(.body)
								.padding(.horizontal)  //padding for start button, makes button wider than text
						}
						.buttonStyle(.glassProminent)
						.glassEffectID("startPauseButton", in: glassNamespace)
						.accessibilityIdentifier("startPauseButton")

						if isSessionPaused {
							Button {
								withMorphAnimation {
									vm.endSession(context: modelContext)
...
							} label: {
								Text("End Session")
									.font(.body)
									.padding(.horizontal)  //padding for start button, makes button wider than text
							}
							.buttonStyle(.glass)
							.glassEffectID("endSessionButton", in: glassNamespace)
							.accessibilityIdentifier("endSessionButton")
						}
					}
				}
		}
	}
...
